Prevent picker overflowing when switcing between date and time picker in Internet Explorer.

--- a/css/material-datetimepicker.css
+++ b/css/material-datetimepicker.css
@@ -95,6 +95,11 @@ md-dialog.dtp {
 .dtp div.dtp-picker {
     padding: 10px;
     text-align: center;
+
+    /* Prevent dialog resizing when switcing between date/time */
+    overflow: hidden;
+    width: 295px;
+    height: 300px;
 }
 
 .dtp div.dtp-picker-month, .dtp div.dtp-actual-time {
@@ -140,11 +145,16 @@ md-dialog.dtp {
 .dtp table.dtp-picker-days tr > td > span.dtp-select-day {
     color: #BDBDBD !important;
 }
-.dtp table.dtp-picker-days tr > td > .dtp-select-day {
+
+.dtp table.dtp-picker-days tr > td, .dtp table.dtp-picker-days tr > td > .dtp-select-day {
     width: 36px;
     height: 36px;
+}
+
+.dtp table.dtp-picker-days tr > td > .dtp-select-day {
     display: inline-block;
 }
+
 .dtp table.dtp-picker-days tr > td > .dtp-select-day, .dtp .dtp-picker-time > a {
     color: #212121;
     text-decoration: none;
@@ -181,6 +191,8 @@ md-dialog.dtp {
     text-align: center;
     font-weight: 700;
     padding: 4px 3px;
+    width: 38px;
+    height: 28px;
 }
 
 .dtp .p10 > a {
@@ -324,3 +336,4 @@ md-dialog.dtp {
 .dtp .center {
     text-align: center;
 }
+
